# tm

./: .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  dev.sh  entrypoint.sh  pyproject.toml
backend/apps/mcp_server/: server.py  tools.py
backend/apps/mcp_server/management/commands/: create_mcp_oauth_app.py  mcp_serve.py
backend/apps/tasks/: admin.py  apps.py  broadcast.py  consumers.py  filters.py  id_generation.py  middleware.py  models.py  query.py  recurring.py  routing.py  serializers.py  signals.py  transitions.py  urls.py  views.py
backend/apps/tasks/management/commands/: generate_recurring_tasks.py
backend/apps/tasks/migrations/: 0001_initial.py  0002_add_backlog_column.py  0003_view_card_display.py  0004_remove_label_label_unique_name_per_project_and_more.py  0005_userprofile.py  0006_alter_recurringtasktemplate_column_alter_task_column.py  0007_multiassignee_priority_color_projectless.py  0007_project_metadata_and_starred.py  0008_nullable_priority.py  0009_profile_image.py  0010_project_metadata_and_starred.py  0011_state_transitions_and_stale_config.py  0012_rename_tasks_state_task_id_at_idx_tasks_state_task_id_ab78b5_idx_and_more.py  0013_userprofile_assign_hotkey_bindings.py  0014_descriptions_to_markdown.py
backend/core/: asgi.py  settings.py  urls.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: sw.js
frontend/src/app/: apple-icon.tsx  globals.css  layout.tsx  manifest.ts  providers.tsx
frontend/src/components/: CommandPalette.tsx  GlobalSearch.tsx  UserAvatar.tsx
(+43 files in other folders)
